WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168369
[GTK] text-at-ofset layout tests are failing in the bots
https://bugs.webkit.org/show_bug.cgi?id=168369
Summary
[GTK] text-at-ofset layout tests are failing in the bots
Carlos Garcia Campos
Reported
2017-02-15 08:46:09 PST
accessibility/gtk/text-at-offset-textarea.html accessibility/gtk/text-at-offset-textinput.html
Attachments
Patch
(5.04 KB, patch)
2018-01-24 07:24 PST
,
Ms2ger (he/him; ⌚ UTC+1/+2)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-02-15 08:46:53 PST
<
rdar://problem/30534881
>
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 2
2018-01-24 07:24:33 PST
Created
attachment 332160
[details]
Patch
Joanmarie Diggs
Comment 3
2018-01-24 07:38:23 PST
***
Bug 164710
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 4
2018-01-24 08:09:57 PST
Comment on
attachment 332160
[details]
Patch Clearing flags on attachment: 332160 Committed
r227523
: <
https://trac.webkit.org/changeset/227523
>
WebKit Commit Bot
Comment 5
2018-01-24 08:09:59 PST
All reviewed patches have been landed. Closing bug.
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 6
2018-01-24 08:11:05 PST
***
Bug 152057
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug